--- a/Monument_Finder.ipynb
+++ b/Monument_Finder.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "import pandas as pd\n",
     "import geopandas as gpd\n",
-    "#import matplotlib.pyplot as plt\n",
+    "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
     "from cartopy.feature import ShapelyFeature\n",
     "import cartopy.crs as ccrs\n",
@@ -27,7 +27,7 @@
     "from shapely.geometry import Point\n",
     "pd.set_option('display.max_colwidth', 175)\n",
     "import folium\n",
-    "#import numpy as np"
+    "import numpy as np"
    ]
   },
   {
