Deleted unused libraries
and commented out 'postcodes.dropna(inplace=True)'

--- a/Monument_Finder.ipynb
+++ b/Monument_Finder.ipynb
@@ -19,15 +19,9 @@
    "source": [
     "import pandas as pd\n",
     "import geopandas as gpd\n",
-    "import matplotlib.pyplot as plt\n",
-    "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
-    "from cartopy.feature import ShapelyFeature\n",
-    "import cartopy.crs as ccrs\n",
-    "import matplotlib.patches as mpatches\n",
     "from shapely.geometry import Point\n",
     "pd.set_option('display.max_colwidth', 175)\n",
-    "import folium\n",
-    "import numpy as np"
+    "import folium"
    ]
   },
   {
@@ -54,7 +48,7 @@
     "    postcodes = pd.read_csv('englishpostcodes3.csv')\n",
     "    postcodes['eastings'] = pd.to_numeric(postcodes['eastings'],errors='coerce')\n",
     "    postcodes['northings'] = pd.to_numeric(postcodes['northings'],errors='coerce')\n",
-    "    postcodes.dropna(inplace=True)\n",
+    "    #postcodes.dropna(inplace=True)\n",
     "    geometry = [Point(xy) for xy in zip(postcodes['eastings'], postcodes['northings'])]\n",
     "    postcodes['geometry'] = geometry\n",
     "    postcodes = gpd.GeoDataFrame(postcodes)\n",
@@ -135,7 +129,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_a33fb7b2f8ddd6f7efa0eabfa7ff68af {\n",
+       "                #map_61a57fd9ae2b01a0f85ecdd5517a7940 {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -147,13 +141,13 @@
        "&lt;/head&gt;\n",
        "&lt;body&gt;    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_a33fb7b2f8ddd6f7efa0eabfa7ff68af&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_61a57fd9ae2b01a0f85ecdd5517a7940&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;    \n",
        "    \n",
-       "            var map_a33fb7b2f8ddd6f7efa0eabfa7ff68af = L.map(\n",
-       "                &quot;map_a33fb7b2f8ddd6f7efa0eabfa7ff68af&quot;,\n",
+       "            var map_61a57fd9ae2b01a0f85ecdd5517a7940 = L.map(\n",
+       "                &quot;map_61a57fd9ae2b01a0f85ecdd5517a7940&quot;,\n",
        "                {\n",
        "                    center: [52.4776, 1.8944],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -167,102 +161,102 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_bcad6bfced59f27aaf9c17481b8082ec = L.tileLayer(\n",
+       "            var tile_layer_7007c00b070200e3f29198935504b875 = L.tileLayer(\n",
        "                &quot;https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
        "                {&quot;attribution&quot;: &quot;Data by \\u0026copy; \\u003ca href=\\&quot;http://openstreetmap.org\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e, under \\u003ca href=\\&quot;http://www.openstreetmap.org/copyright\\&quot;\\u003eODbL\\u003c/a\\u003e.&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_a33fb7b2f8ddd6f7efa0eabfa7ff68af);\n",
+       "            ).addTo(map_61a57fd9ae2b01a0f85ecdd5517a7940);\n",
        "        \n",
        "    \n",
-       "            var marker_3686a5e9eda3e911c07c3e50b4740e08 = L.marker(\n",
-       "                [52.43630536113049, -1.8639894935764214],\n",
+       "            var marker_1ee98a19a7c0926e068bd5f485546feb = L.marker(\n",
+       "                [54.97374895267365, -1.607838597220768],\n",
        "                {}\n",
-       "            ).addTo(map_a33fb7b2f8ddd6f7efa0eabfa7ff68af);\n",
+       "            ).addTo(map_61a57fd9ae2b01a0f85ecdd5517a7940);\n",
        "        \n",
        "    \n",
-       "        var popup_8c59c96e0fccae76937eddae80f1d521 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_195d078af37df091b17447d3a2380646 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
-       "            var html_be4f29e51c234e9e1aca05e13d087917 = $(`&lt;div id=&quot;html_be4f29e51c234e9e1aca05e13d087917&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Burnt mounds at Moseley Bog, 380m north east of Moseley New Pool&lt;/div&gt;`)[0];\n",
-       "            popup_8c59c96e0fccae76937eddae80f1d521.setContent(html_be4f29e51c234e9e1aca05e13d087917);\n",
+       "            var html_59b5eab327a230acbce829a17861d05e = $(`&lt;div id=&quot;html_59b5eab327a230acbce829a17861d05e&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Newcastle upon Tyne town defences: section of curtain wall including Plummer Tower and a 17th century bastion&lt;/div&gt;`)[0];\n",
+       "            popup_195d078af37df091b17447d3a2380646.setContent(html_59b5eab327a230acbce829a17861d05e);\n",
        "        \n",
        "\n",
-       "        marker_3686a5e9eda3e911c07c3e50b4740e08.bindPopup(popup_8c59c96e0fccae76937eddae80f1d521)\n",
+       "        marker_1ee98a19a7c0926e068bd5f485546feb.bindPopup(popup_195d078af37df091b17447d3a2380646)\n",
        "        ;\n",
        "\n",
        "        \n",
        "    \n",
        "    \n",
-       "            var marker_5d99a85cbb0fc73bc4ea390da923c3b1 = L.marker(\n",
-       "                [52.45139846963874, -1.9387984392353022],\n",
+       "            var marker_3f7f38a62779e274f54ceed7a928d198 = L.marker(\n",
+       "                [54.97376333006797, -1.618704462426388],\n",
        "                {}\n",
-       "            ).addTo(map_a33fb7b2f8ddd6f7efa0eabfa7ff68af);\n",
+       "            ).addTo(map_61a57fd9ae2b01a0f85ecdd5517a7940);\n",
        "        \n",
        "    \n",
-       "        var popup_2566da40662ef36f3557aeab87be4274 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_92483df514da461b3da6087e79db3fac = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
-       "            var html_311757601fc156842d0936f482033c7c = $(`&lt;div id=&quot;html_311757601fc156842d0936f482033c7c&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Roman forts at Metchley&lt;/div&gt;`)[0];\n",
-       "            popup_2566da40662ef36f3557aeab87be4274.setContent(html_311757601fc156842d0936f482033c7c);\n",
+       "            var html_16937a6b33fb3ecf8431f6710da41004 = $(`&lt;div id=&quot;html_16937a6b33fb3ecf8431f6710da41004&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Newcastle upon Tyne town defences: section of curtain wall including St Andrew&#x27;s Tower and section of town ditch&lt;/div&gt;`)[0];\n",
+       "            popup_92483df514da461b3da6087e79db3fac.setContent(html_16937a6b33fb3ecf8431f6710da41004);\n",
        "        \n",
        "\n",
-       "        marker_5d99a85cbb0fc73bc4ea390da923c3b1.bindPopup(popup_2566da40662ef36f3557aeab87be4274)\n",
+       "        marker_3f7f38a62779e274f54ceed7a928d198.bindPopup(popup_92483df514da461b3da6087e79db3fac)\n",
        "        ;\n",
        "\n",
        "        \n",
        "    \n",
        "    \n",
-       "            var marker_1b9875de87072197a543038c95904d68 = L.marker(\n",
-       "                [52.43743990983156, -1.8179790315360316],\n",
+       "            var marker_00a7b00bc19b66632fd7f81babe581f3 = L.marker(\n",
+       "                [54.96889147128266, -1.6100492837164126],\n",
        "                {}\n",
-       "            ).addTo(map_a33fb7b2f8ddd6f7efa0eabfa7ff68af);\n",
+       "            ).addTo(map_61a57fd9ae2b01a0f85ecdd5517a7940);\n",
        "        \n",
        "    \n",
-       "        var popup_47eca7d46824f5cda1a121dfa8d31324 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_712d24048a87025adab5ac04ca9bc4cf = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
-       "            var html_a54f25fba9ebf2033da0e0a4e8598996 = $(`&lt;div id=&quot;html_a54f25fba9ebf2033da0e0a4e8598996&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Burnt mound in Fox Hollies Park, 140m south east of Round Pool&lt;/div&gt;`)[0];\n",
-       "            popup_47eca7d46824f5cda1a121dfa8d31324.setContent(html_a54f25fba9ebf2033da0e0a4e8598996);\n",
+       "            var html_b6f3dd7a90957d3fbe958504f7d7b5fb = $(`&lt;div id=&quot;html_b6f3dd7a90957d3fbe958504f7d7b5fb&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Roman fort, Anglo-Saxon cemetery, motte and bailey castle and tower keep castle&lt;/div&gt;`)[0];\n",
+       "            popup_712d24048a87025adab5ac04ca9bc4cf.setContent(html_b6f3dd7a90957d3fbe958504f7d7b5fb);\n",
        "        \n",
        "\n",
-       "        marker_1b9875de87072197a543038c95904d68.bindPopup(popup_47eca7d46824f5cda1a121dfa8d31324)\n",
+       "        marker_00a7b00bc19b66632fd7f81babe581f3.bindPopup(popup_712d24048a87025adab5ac04ca9bc4cf)\n",
        "        ;\n",
        "\n",
        "        \n",
        "    \n",
        "    \n",
-       "            var marker_36b402fe8d666c133e2376e396a77124 = L.marker(\n",
-       "                [52.413239960346345, -1.9193473581486686],\n",
+       "            var marker_1421f30fca712a1c14bf2b5712f9b16e = L.marker(\n",
+       "                [54.97132891441838, -1.6060170244804164],\n",
        "                {}\n",
-       "            ).addTo(map_a33fb7b2f8ddd6f7efa0eabfa7ff68af);\n",
+       "            ).addTo(map_61a57fd9ae2b01a0f85ecdd5517a7940);\n",
        "        \n",
        "    \n",
-       "        var popup_0048967aa5983ff7cf54821f5703317d = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_678e7b838ef59d97e2826c0d277db8e3 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
-       "            var html_57f6def98c8d858419bdd26295ae4430 = $(`&lt;div id=&quot;html_57f6def98c8d858419bdd26295ae4430&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Guillotine Lock, Stratford Canal&lt;/div&gt;`)[0];\n",
-       "            popup_0048967aa5983ff7cf54821f5703317d.setContent(html_57f6def98c8d858419bdd26295ae4430);\n",
+       "            var html_818e9477ae394a1fcb5be615d35391b2 = $(`&lt;div id=&quot;html_818e9477ae394a1fcb5be615d35391b2&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Newcastle upon Tyne town defences: section of curtain wall containing Corner Tower&lt;/div&gt;`)[0];\n",
+       "            popup_678e7b838ef59d97e2826c0d277db8e3.setContent(html_818e9477ae394a1fcb5be615d35391b2);\n",
        "        \n",
        "\n",
-       "        marker_36b402fe8d666c133e2376e396a77124.bindPopup(popup_0048967aa5983ff7cf54821f5703317d)\n",
+       "        marker_1421f30fca712a1c14bf2b5712f9b16e.bindPopup(popup_678e7b838ef59d97e2826c0d277db8e3)\n",
        "        ;\n",
        "\n",
        "        \n",
        "    \n",
        "    \n",
-       "            var marker_7fd6af03bb74b3e9ebe72c2e81bf0825 = L.marker(\n",
-       "                [52.44282195244149, -1.9695448237740723],\n",
+       "            var marker_d265442aa715d2e8cb2c02e8f6fff1f8 = L.marker(\n",
+       "                [54.972002755531214, -1.6196308965136506],\n",
        "                {}\n",
-       "            ).addTo(map_a33fb7b2f8ddd6f7efa0eabfa7ff68af);\n",
+       "            ).addTo(map_61a57fd9ae2b01a0f85ecdd5517a7940);\n",
        "        \n",
        "    \n",
-       "        var popup_e9391aa2c8ebd8b98adc23cdaef0754e = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_ffeb427e451991d5ea39ca8aa002ed5d = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
-       "            var html_4e90d9c9f43f95043430c100c9cb66b9 = $(`&lt;div id=&quot;html_4e90d9c9f43f95043430c100c9cb66b9&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Weoley Castle&lt;/div&gt;`)[0];\n",
-       "            popup_e9391aa2c8ebd8b98adc23cdaef0754e.setContent(html_4e90d9c9f43f95043430c100c9cb66b9);\n",
+       "            var html_ad99895f84f389fc37bfc801d64c8790 = $(`&lt;div id=&quot;html_ad99895f84f389fc37bfc801d64c8790&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;The Friars, remains of Dominican friary&lt;/div&gt;`)[0];\n",
+       "            popup_ffeb427e451991d5ea39ca8aa002ed5d.setContent(html_ad99895f84f389fc37bfc801d64c8790);\n",
        "        \n",
        "\n",
-       "        marker_7fd6af03bb74b3e9ebe72c2e81bf0825.bindPopup(popup_e9391aa2c8ebd8b98adc23cdaef0754e)\n",
+       "        marker_d265442aa715d2e8cb2c02e8f6fff1f8.bindPopup(popup_ffeb427e451991d5ea39ca8aa002ed5d)\n",
        "        ;\n",
        "\n",
        "        \n",
@@ -270,7 +264,7 @@
        "&lt;/script&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x13da789a8e0>"
+       "<folium.folium.Map at 0x14a5afb1100>"
       ]
      },
      "execution_count": 3,
@@ -279,9 +273,17 @@
     }
    ],
    "source": [
-    "pcode= 'B12'\n",
+    "pcode= 'NE1'\n",
     "monument_finder_map(pcode)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d25d9ac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
