doc strings added
And 'help' option tested

--- a/Monument_Finder.ipynb
+++ b/Monument_Finder.ipynb
@@ -26,23 +26,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "1a996f5f",
    "metadata": {},
    "outputs": [],
    "source": [
     " \n",
-    "\"\"\"\n",
-    "This function takes a list of English postcodes and a list of English scheduled monuments\n",
-    "and returns the nearest 5 mounuments to the centre point of the postcode.\n",
+    "\n",
+    "def monument_finder(pcode): \n",
     "    \n",
-    "Args:\n",
-    "pcode: First half of any English postcode\n",
-    "        \n",
-    "Returns:\n",
+    "    \"\"\"\n",
+    "    This function takes a list of English postcodes and a list of English scheduled monuments\n",
+    "    and returns the nearest 5 mounuments to the centre point of the postcode.\n",
+    "\n",
+    "    Args:\n",
+    "        pcode: First half of any English postcode, as a string (eg everything that comes before the gap,\n",
+    "        eg \"NE47 P22\" is written as \"NE47\")\n",
+    "\n",
+    "    Returns: class 'pandas.core.series.Series'\n",
     "\n",
     "    \"\"\"\n",
-    "def monument_finder(pcode): \n",
     "    monuments = gpd.read_file('Scheduled Monuments\\\\Monuments2.shp')\n",
     "    monuments.to_crs(epsg=27700,inplace=True)\n",
     "    postcodes = pd.read_csv('englishpostcodes3.csv')\n",
@@ -57,16 +60,21 @@
     "    monuments['distance'] = monuments['geometry'].distance(postcode) \n",
     "    monuments.sort_values(by='distance', ascending=True, inplace=True)\n",
     "    monuments.reset_index(inplace=True)\n",
-    "    #print(monuments['Name'].head())\n",
+    "    #print(\"the type of object my function returns is:\", type(monuments['Name'].head()))\n",
     "    return monuments.head()\n",
-    "\"\"\"\n",
-    "This is the new function that enables the map to be renewed each time it is\n",
-    "code is run.\n",
     "\n",
-    "\n",
-    "\"\"\"\n",
     "\n",
     "def monument_finder_map(pcode):\n",
+    "    \"\"\"\n",
+    "    This function refreshes the map so that only the new outputs are displayed.\n",
+    "    \n",
+    "    Args:\n",
+    "        pcode: First half of any English postcode, as a string (eg everything that comes before the gap,\n",
+    "        eg \"NE47 P22\" is written as \"NE47\")\n",
+    "        \n",
+    "    Returns: class 'pandas.core.series.Series'\n",
+    "\n",
+    "    \"\"\"\n",
     "    nearest_monument = monument_finder(pcode)\n",
     "    my_map = folium.Map(location=[52.4776, 1.8944], zoom_start=6)\n",
     "    for _, r in nearest_monument.to_crs(epsg=4326).iterrows():\n",
@@ -89,7 +97,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
+   "id": "6fc7d71c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function monument_finder in module __main__:\n",
+      "\n",
+      "monument_finder(pcode)\n",
+      "    This function takes a list of English postcodes and a list of English scheduled monuments\n",
+      "    and returns the nearest 5 mounuments to the centre point of the postcode.\n",
+      "    \n",
+      "    Args:\n",
+      "        pcode: First half of any English postcode, as a string (eg everything that comes before the gap,\n",
+      "        eg \"NE47 P22\" is written as \"NE47\")\n",
+      "    \n",
+      "    Returns: class 'pandas.core.series.Series'\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(monument_finder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "5d5adc12",
    "metadata": {},
    "outputs": [
@@ -99,6 +136,13 @@
      "text": [
       "C:\\Users\\inkyt\\anaconda3\\envs\\egm722\\lib\\site-packages\\pandas\\core\\dtypes\\cast.py:122: ShapelyDeprecationWarning: The array interface is deprecated and will no longer work in Shapely 2.0. Convert the '.coords' to a numpy array instead.\n",
       "  arr = construct_1d_object_array_from_listlike(values)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the type object my function returns is: <class 'pandas.core.series.Series'>\n"
      ]
     },
     {
@@ -129,7 +173,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_61a57fd9ae2b01a0f85ecdd5517a7940 {\n",
+       "                #map_34ca471bf089f8cf60b1759c36f387fc {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -141,13 +185,13 @@
        "&lt;/head&gt;\n",
        "&lt;body&gt;    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_61a57fd9ae2b01a0f85ecdd5517a7940&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_34ca471bf089f8cf60b1759c36f387fc&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;    \n",
        "    \n",
-       "            var map_61a57fd9ae2b01a0f85ecdd5517a7940 = L.map(\n",
-       "                &quot;map_61a57fd9ae2b01a0f85ecdd5517a7940&quot;,\n",
+       "            var map_34ca471bf089f8cf60b1759c36f387fc = L.map(\n",
+       "                &quot;map_34ca471bf089f8cf60b1759c36f387fc&quot;,\n",
        "                {\n",
        "                    center: [52.4776, 1.8944],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -161,102 +205,102 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_7007c00b070200e3f29198935504b875 = L.tileLayer(\n",
+       "            var tile_layer_73c6bfa978a675d8a58ee5339e88399d = L.tileLayer(\n",
        "                &quot;https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
        "                {&quot;attribution&quot;: &quot;Data by \\u0026copy; \\u003ca href=\\&quot;http://openstreetmap.org\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e, under \\u003ca href=\\&quot;http://www.openstreetmap.org/copyright\\&quot;\\u003eODbL\\u003c/a\\u003e.&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_61a57fd9ae2b01a0f85ecdd5517a7940);\n",
+       "            ).addTo(map_34ca471bf089f8cf60b1759c36f387fc);\n",
        "        \n",
        "    \n",
-       "            var marker_1ee98a19a7c0926e068bd5f485546feb = L.marker(\n",
+       "            var marker_ad9cb42e805ddfad36f9cef3ad6abf28 = L.marker(\n",
        "                [54.97374895267365, -1.607838597220768],\n",
        "                {}\n",
-       "            ).addTo(map_61a57fd9ae2b01a0f85ecdd5517a7940);\n",
+       "            ).addTo(map_34ca471bf089f8cf60b1759c36f387fc);\n",
        "        \n",
        "    \n",
-       "        var popup_195d078af37df091b17447d3a2380646 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_da22a053b38e2a566f0727beaa7102f8 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
-       "            var html_59b5eab327a230acbce829a17861d05e = $(`&lt;div id=&quot;html_59b5eab327a230acbce829a17861d05e&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Newcastle upon Tyne town defences: section of curtain wall including Plummer Tower and a 17th century bastion&lt;/div&gt;`)[0];\n",
-       "            popup_195d078af37df091b17447d3a2380646.setContent(html_59b5eab327a230acbce829a17861d05e);\n",
+       "            var html_2610127ba760b969db4522dd3d9f4041 = $(`&lt;div id=&quot;html_2610127ba760b969db4522dd3d9f4041&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Newcastle upon Tyne town defences: section of curtain wall including Plummer Tower and a 17th century bastion&lt;/div&gt;`)[0];\n",
+       "            popup_da22a053b38e2a566f0727beaa7102f8.setContent(html_2610127ba760b969db4522dd3d9f4041);\n",
        "        \n",
        "\n",
-       "        marker_1ee98a19a7c0926e068bd5f485546feb.bindPopup(popup_195d078af37df091b17447d3a2380646)\n",
+       "        marker_ad9cb42e805ddfad36f9cef3ad6abf28.bindPopup(popup_da22a053b38e2a566f0727beaa7102f8)\n",
        "        ;\n",
        "\n",
        "        \n",
        "    \n",
        "    \n",
-       "            var marker_3f7f38a62779e274f54ceed7a928d198 = L.marker(\n",
+       "            var marker_c116e21c192172ef0418d31fdc21ae6e = L.marker(\n",
        "                [54.97376333006797, -1.618704462426388],\n",
        "                {}\n",
-       "            ).addTo(map_61a57fd9ae2b01a0f85ecdd5517a7940);\n",
+       "            ).addTo(map_34ca471bf089f8cf60b1759c36f387fc);\n",
        "        \n",
        "    \n",
-       "        var popup_92483df514da461b3da6087e79db3fac = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_c2247aab1d563f10d3a2fc962992e57d = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
-       "            var html_16937a6b33fb3ecf8431f6710da41004 = $(`&lt;div id=&quot;html_16937a6b33fb3ecf8431f6710da41004&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Newcastle upon Tyne town defences: section of curtain wall including St Andrew&#x27;s Tower and section of town ditch&lt;/div&gt;`)[0];\n",
-       "            popup_92483df514da461b3da6087e79db3fac.setContent(html_16937a6b33fb3ecf8431f6710da41004);\n",
+       "            var html_0010211428715be66b977fd311e99851 = $(`&lt;div id=&quot;html_0010211428715be66b977fd311e99851&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Newcastle upon Tyne town defences: section of curtain wall including St Andrew&#x27;s Tower and section of town ditch&lt;/div&gt;`)[0];\n",
+       "            popup_c2247aab1d563f10d3a2fc962992e57d.setContent(html_0010211428715be66b977fd311e99851);\n",
        "        \n",
        "\n",
-       "        marker_3f7f38a62779e274f54ceed7a928d198.bindPopup(popup_92483df514da461b3da6087e79db3fac)\n",
+       "        marker_c116e21c192172ef0418d31fdc21ae6e.bindPopup(popup_c2247aab1d563f10d3a2fc962992e57d)\n",
        "        ;\n",
        "\n",
        "        \n",
        "    \n",
        "    \n",
-       "            var marker_00a7b00bc19b66632fd7f81babe581f3 = L.marker(\n",
+       "            var marker_1a92903575f1403a66664ae96f646113 = L.marker(\n",
        "                [54.96889147128266, -1.6100492837164126],\n",
        "                {}\n",
-       "            ).addTo(map_61a57fd9ae2b01a0f85ecdd5517a7940);\n",
+       "            ).addTo(map_34ca471bf089f8cf60b1759c36f387fc);\n",
        "        \n",
        "    \n",
-       "        var popup_712d24048a87025adab5ac04ca9bc4cf = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_a3e356a739e74294e3f326bf55729419 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
-       "            var html_b6f3dd7a90957d3fbe958504f7d7b5fb = $(`&lt;div id=&quot;html_b6f3dd7a90957d3fbe958504f7d7b5fb&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Roman fort, Anglo-Saxon cemetery, motte and bailey castle and tower keep castle&lt;/div&gt;`)[0];\n",
-       "            popup_712d24048a87025adab5ac04ca9bc4cf.setContent(html_b6f3dd7a90957d3fbe958504f7d7b5fb);\n",
+       "            var html_f95a992f7f92e1d860fc774d162a7bad = $(`&lt;div id=&quot;html_f95a992f7f92e1d860fc774d162a7bad&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Roman fort, Anglo-Saxon cemetery, motte and bailey castle and tower keep castle&lt;/div&gt;`)[0];\n",
+       "            popup_a3e356a739e74294e3f326bf55729419.setContent(html_f95a992f7f92e1d860fc774d162a7bad);\n",
        "        \n",
        "\n",
-       "        marker_00a7b00bc19b66632fd7f81babe581f3.bindPopup(popup_712d24048a87025adab5ac04ca9bc4cf)\n",
+       "        marker_1a92903575f1403a66664ae96f646113.bindPopup(popup_a3e356a739e74294e3f326bf55729419)\n",
        "        ;\n",
        "\n",
        "        \n",
        "    \n",
        "    \n",
-       "            var marker_1421f30fca712a1c14bf2b5712f9b16e = L.marker(\n",
+       "            var marker_87791fe6052cdeefc2e2abc86a1dcca9 = L.marker(\n",
        "                [54.97132891441838, -1.6060170244804164],\n",
        "                {}\n",
-       "            ).addTo(map_61a57fd9ae2b01a0f85ecdd5517a7940);\n",
+       "            ).addTo(map_34ca471bf089f8cf60b1759c36f387fc);\n",
        "        \n",
        "    \n",
-       "        var popup_678e7b838ef59d97e2826c0d277db8e3 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_5e3a274236ea782e813986c9b4a1010f = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
-       "            var html_818e9477ae394a1fcb5be615d35391b2 = $(`&lt;div id=&quot;html_818e9477ae394a1fcb5be615d35391b2&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Newcastle upon Tyne town defences: section of curtain wall containing Corner Tower&lt;/div&gt;`)[0];\n",
-       "            popup_678e7b838ef59d97e2826c0d277db8e3.setContent(html_818e9477ae394a1fcb5be615d35391b2);\n",
+       "            var html_8a3ddfe21231d973525dff3ce3095c2c = $(`&lt;div id=&quot;html_8a3ddfe21231d973525dff3ce3095c2c&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Newcastle upon Tyne town defences: section of curtain wall containing Corner Tower&lt;/div&gt;`)[0];\n",
+       "            popup_5e3a274236ea782e813986c9b4a1010f.setContent(html_8a3ddfe21231d973525dff3ce3095c2c);\n",
        "        \n",
        "\n",
-       "        marker_1421f30fca712a1c14bf2b5712f9b16e.bindPopup(popup_678e7b838ef59d97e2826c0d277db8e3)\n",
+       "        marker_87791fe6052cdeefc2e2abc86a1dcca9.bindPopup(popup_5e3a274236ea782e813986c9b4a1010f)\n",
        "        ;\n",
        "\n",
        "        \n",
        "    \n",
        "    \n",
-       "            var marker_d265442aa715d2e8cb2c02e8f6fff1f8 = L.marker(\n",
+       "            var marker_4d56f5b572bba603e22cb18bb2813a67 = L.marker(\n",
        "                [54.972002755531214, -1.6196308965136506],\n",
        "                {}\n",
-       "            ).addTo(map_61a57fd9ae2b01a0f85ecdd5517a7940);\n",
+       "            ).addTo(map_34ca471bf089f8cf60b1759c36f387fc);\n",
        "        \n",
        "    \n",
-       "        var popup_ffeb427e451991d5ea39ca8aa002ed5d = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_7dde9959cddaff4e3191a723ad7aef8d = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
-       "            var html_ad99895f84f389fc37bfc801d64c8790 = $(`&lt;div id=&quot;html_ad99895f84f389fc37bfc801d64c8790&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;The Friars, remains of Dominican friary&lt;/div&gt;`)[0];\n",
-       "            popup_ffeb427e451991d5ea39ca8aa002ed5d.setContent(html_ad99895f84f389fc37bfc801d64c8790);\n",
+       "            var html_aec9c0f11e6240ef30a4a4af30fe060a = $(`&lt;div id=&quot;html_aec9c0f11e6240ef30a4a4af30fe060a&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;The Friars, remains of Dominican friary&lt;/div&gt;`)[0];\n",
+       "            popup_7dde9959cddaff4e3191a723ad7aef8d.setContent(html_aec9c0f11e6240ef30a4a4af30fe060a);\n",
        "        \n",
        "\n",
-       "        marker_d265442aa715d2e8cb2c02e8f6fff1f8.bindPopup(popup_ffeb427e451991d5ea39ca8aa002ed5d)\n",
+       "        marker_4d56f5b572bba603e22cb18bb2813a67.bindPopup(popup_7dde9959cddaff4e3191a723ad7aef8d)\n",
        "        ;\n",
        "\n",
        "        \n",
@@ -264,10 +308,10 @@
        "&lt;/script&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x14a5afb1100>"
+       "<folium.folium.Map at 0x14a604ae310>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d25d9ac",
+   "id": "713ce07e",
    "metadata": {},
    "outputs": [],
    "source": []
