--- a/Monument_Finder.ipynb
+++ b/Monument_Finder.ipynb
@@ -21,112 +21,23 @@
     "import geopandas as gpd\n",
     "from shapely.geometry import Point\n",
     "pd.set_option('display.max_colwidth', 175)\n",
-    "import folium"
+    "import folium\n",
+    "import BackgroundFunctions as bf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "1a996f5f",
+   "execution_count": null,
+   "id": "ef28a405",
    "metadata": {},
    "outputs": [],
    "source": [
-    " \n",
-    "\n",
-    "def monument_finder(pcode): \n",
-    "    \n",
-    "    \"\"\"\n",
-    "    This function takes a list of English postcodes and a list of English scheduled monuments\n",
-    "    and returns the nearest 5 mounuments to the centre point of the postcode.\n",
-    "\n",
-    "    Args:\n",
-    "        pcode: First half of any English postcode, as a string (eg everything that comes before the gap,\n",
-    "        eg \"NE47 P22\" is written as \"NE47\")\n",
-    "\n",
-    "    Returns: class 'pandas.core.series.Series'\n",
-    "\n",
-    "    \"\"\"\n",
-    "    monuments = gpd.read_file('Scheduled Monuments\\\\Monuments2.shp')\n",
-    "    monuments.to_crs(epsg=27700,inplace=True)\n",
-    "    postcodes = pd.read_csv('englishpostcodes3.csv')\n",
-    "    postcodes['eastings'] = pd.to_numeric(postcodes['eastings'],errors='coerce')\n",
-    "    postcodes['northings'] = pd.to_numeric(postcodes['northings'],errors='coerce')\n",
-    "    #postcodes.dropna(inplace=True)\n",
-    "    geometry = [Point(xy) for xy in zip(postcodes['eastings'], postcodes['northings'])]\n",
-    "    postcodes['geometry'] = geometry\n",
-    "    postcodes = gpd.GeoDataFrame(postcodes)\n",
-    "    postcodes.set_crs(epsg=27700, inplace=True)\n",
-    "    postcode = postcodes.loc[postcodes['postcode'] == pcode, 'geometry'].values[0]\n",
-    "    monuments['distance'] = monuments['geometry'].distance(postcode) \n",
-    "    monuments.sort_values(by='distance', ascending=True, inplace=True)\n",
-    "    monuments.reset_index(inplace=True)\n",
-    "    #print(\"the type of object my function returns is:\", type(monuments['Name'].head()))\n",
-    "    return monuments.head()\n",
-    "\n",
-    "\n",
-    "def monument_finder_map(pcode):\n",
-    "    \"\"\"\n",
-    "    This function refreshes the map so that only the new outputs are displayed.\n",
-    "    \n",
-    "    Args:\n",
-    "        pcode: First half of any English postcode, as a string (eg everything that comes before the gap,\n",
-    "        eg \"NE47 P22\" is written as \"NE47\")\n",
-    "        \n",
-    "    Returns: class 'pandas.core.series.Series'\n",
-    "\n",
-    "    \"\"\"\n",
-    "    nearest_monument = monument_finder(pcode)\n",
-    "    my_map = folium.Map(location=[52.4776, 1.8944], zoom_start=6)\n",
-    "    for _, r in nearest_monument.to_crs(epsg=4326).iterrows():\n",
-    "        centroid = gpd.GeoSeries(r['geometry']).set_crs(epsg=4326).to_crs(epsg=27700).centroid\n",
-    "        centroid = gpd.GeoSeries(centroid).set_crs(epsg=27700).to_crs(epsg=4326)\n",
-    "        #adding the centroid to the map,and ensuring it displays at the right scale\n",
-    "        folium.Marker(location=[centroid.y,centroid.x],popup= r['Name']).add_to(my_map)\n",
-    "        # Project to [insert right crs)] projected crs\n",
-    "        nearest_monument = nearest_monument.to_crs(epsg=2263)\n",
-    "        # Access the centroid attribute of each polygon\n",
-    "        nearest_monument['centroid'] = nearest_monument.centroid\n",
-    "        # geometry (active) column\n",
-    "        nearest_monument = nearest_monument.to_crs(epsg=4326)\n",
-    "        # Centroid column\n",
-    "        nearest_monument['centroid'] = nearest_monument['centroid'].to_crs(epsg=4326)\n",
-    "\n",
-    "        nearest_monument.head()\n",
-    "    return my_map"
+    "#help(monument_finder)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "6fc7d71c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function monument_finder in module __main__:\n",
-      "\n",
-      "monument_finder(pcode)\n",
-      "    This function takes a list of English postcodes and a list of English scheduled monuments\n",
-      "    and returns the nearest 5 mounuments to the centre point of the postcode.\n",
-      "    \n",
-      "    Args:\n",
-      "        pcode: First half of any English postcode, as a string (eg everything that comes before the gap,\n",
-      "        eg \"NE47 P22\" is written as \"NE47\")\n",
-      "    \n",
-      "    Returns: class 'pandas.core.series.Series'\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "help(monument_finder)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "5d5adc12",
    "metadata": {},
    "outputs": [
@@ -136,13 +47,6 @@
      "text": [
       "C:\\Users\\inkyt\\anaconda3\\envs\\egm722\\lib\\site-packages\\pandas\\core\\dtypes\\cast.py:122: ShapelyDeprecationWarning: The array interface is deprecated and will no longer work in Shapely 2.0. Convert the '.coords' to a numpy array instead.\n",
       "  arr = construct_1d_object_array_from_listlike(values)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "the type object my function returns is: <class 'pandas.core.series.Series'>\n"
      ]
     },
     {
@@ -173,7 +77,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_34ca471bf089f8cf60b1759c36f387fc {\n",
+       "                #map_6f3e53998e8216a937e03ad7a9031598 {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -185,13 +89,13 @@
        "&lt;/head&gt;\n",
        "&lt;body&gt;    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_34ca471bf089f8cf60b1759c36f387fc&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_6f3e53998e8216a937e03ad7a9031598&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;    \n",
        "    \n",
-       "            var map_34ca471bf089f8cf60b1759c36f387fc = L.map(\n",
-       "                &quot;map_34ca471bf089f8cf60b1759c36f387fc&quot;,\n",
+       "            var map_6f3e53998e8216a937e03ad7a9031598 = L.map(\n",
+       "                &quot;map_6f3e53998e8216a937e03ad7a9031598&quot;,\n",
        "                {\n",
        "                    center: [52.4776, 1.8944],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -205,102 +109,102 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_73c6bfa978a675d8a58ee5339e88399d = L.tileLayer(\n",
+       "            var tile_layer_70613a9987603af8ce1d1a55c84be151 = L.tileLayer(\n",
        "                &quot;https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
        "                {&quot;attribution&quot;: &quot;Data by \\u0026copy; \\u003ca href=\\&quot;http://openstreetmap.org\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e, under \\u003ca href=\\&quot;http://www.openstreetmap.org/copyright\\&quot;\\u003eODbL\\u003c/a\\u003e.&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_34ca471bf089f8cf60b1759c36f387fc);\n",
+       "            ).addTo(map_6f3e53998e8216a937e03ad7a9031598);\n",
        "        \n",
        "    \n",
-       "            var marker_ad9cb42e805ddfad36f9cef3ad6abf28 = L.marker(\n",
+       "            var marker_7ff2ae53e7739b27308ff12027b0318f = L.marker(\n",
        "                [54.97374895267365, -1.607838597220768],\n",
        "                {}\n",
-       "            ).addTo(map_34ca471bf089f8cf60b1759c36f387fc);\n",
+       "            ).addTo(map_6f3e53998e8216a937e03ad7a9031598);\n",
        "        \n",
        "    \n",
-       "        var popup_da22a053b38e2a566f0727beaa7102f8 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_cb78ebd3cac064f028ea02d5cda7080b = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
-       "            var html_2610127ba760b969db4522dd3d9f4041 = $(`&lt;div id=&quot;html_2610127ba760b969db4522dd3d9f4041&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Newcastle upon Tyne town defences: section of curtain wall including Plummer Tower and a 17th century bastion&lt;/div&gt;`)[0];\n",
-       "            popup_da22a053b38e2a566f0727beaa7102f8.setContent(html_2610127ba760b969db4522dd3d9f4041);\n",
+       "            var html_38e066db12f7102a1b48a6fcc9ddb4c5 = $(`&lt;div id=&quot;html_38e066db12f7102a1b48a6fcc9ddb4c5&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Newcastle upon Tyne town defences: section of curtain wall including Plummer Tower and a 17th century bastion&lt;/div&gt;`)[0];\n",
+       "            popup_cb78ebd3cac064f028ea02d5cda7080b.setContent(html_38e066db12f7102a1b48a6fcc9ddb4c5);\n",
        "        \n",
        "\n",
-       "        marker_ad9cb42e805ddfad36f9cef3ad6abf28.bindPopup(popup_da22a053b38e2a566f0727beaa7102f8)\n",
+       "        marker_7ff2ae53e7739b27308ff12027b0318f.bindPopup(popup_cb78ebd3cac064f028ea02d5cda7080b)\n",
        "        ;\n",
        "\n",
        "        \n",
        "    \n",
        "    \n",
-       "            var marker_c116e21c192172ef0418d31fdc21ae6e = L.marker(\n",
+       "            var marker_041e46ded191168904ca0db0ed628ed0 = L.marker(\n",
        "                [54.97376333006797, -1.618704462426388],\n",
        "                {}\n",
-       "            ).addTo(map_34ca471bf089f8cf60b1759c36f387fc);\n",
+       "            ).addTo(map_6f3e53998e8216a937e03ad7a9031598);\n",
        "        \n",
        "    \n",
-       "        var popup_c2247aab1d563f10d3a2fc962992e57d = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_131f52aaff524dcae02c8a7303e90a63 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
-       "            var html_0010211428715be66b977fd311e99851 = $(`&lt;div id=&quot;html_0010211428715be66b977fd311e99851&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Newcastle upon Tyne town defences: section of curtain wall including St Andrew&#x27;s Tower and section of town ditch&lt;/div&gt;`)[0];\n",
-       "            popup_c2247aab1d563f10d3a2fc962992e57d.setContent(html_0010211428715be66b977fd311e99851);\n",
+       "            var html_3b3b83cdb5c3e0d2d2b8098023f58df7 = $(`&lt;div id=&quot;html_3b3b83cdb5c3e0d2d2b8098023f58df7&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Newcastle upon Tyne town defences: section of curtain wall including St Andrew&#x27;s Tower and section of town ditch&lt;/div&gt;`)[0];\n",
+       "            popup_131f52aaff524dcae02c8a7303e90a63.setContent(html_3b3b83cdb5c3e0d2d2b8098023f58df7);\n",
        "        \n",
        "\n",
-       "        marker_c116e21c192172ef0418d31fdc21ae6e.bindPopup(popup_c2247aab1d563f10d3a2fc962992e57d)\n",
+       "        marker_041e46ded191168904ca0db0ed628ed0.bindPopup(popup_131f52aaff524dcae02c8a7303e90a63)\n",
        "        ;\n",
        "\n",
        "        \n",
        "    \n",
        "    \n",
-       "            var marker_1a92903575f1403a66664ae96f646113 = L.marker(\n",
+       "            var marker_18f36ff76948e8f513ff8ee666334452 = L.marker(\n",
        "                [54.96889147128266, -1.6100492837164126],\n",
        "                {}\n",
-       "            ).addTo(map_34ca471bf089f8cf60b1759c36f387fc);\n",
+       "            ).addTo(map_6f3e53998e8216a937e03ad7a9031598);\n",
        "        \n",
        "    \n",
-       "        var popup_a3e356a739e74294e3f326bf55729419 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_6451b2738f658b283e6f5cee15fab169 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
-       "            var html_f95a992f7f92e1d860fc774d162a7bad = $(`&lt;div id=&quot;html_f95a992f7f92e1d860fc774d162a7bad&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Roman fort, Anglo-Saxon cemetery, motte and bailey castle and tower keep castle&lt;/div&gt;`)[0];\n",
-       "            popup_a3e356a739e74294e3f326bf55729419.setContent(html_f95a992f7f92e1d860fc774d162a7bad);\n",
+       "            var html_85e4127938c8f2fd9d4b1352bc0854cd = $(`&lt;div id=&quot;html_85e4127938c8f2fd9d4b1352bc0854cd&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Roman fort, Anglo-Saxon cemetery, motte and bailey castle and tower keep castle&lt;/div&gt;`)[0];\n",
+       "            popup_6451b2738f658b283e6f5cee15fab169.setContent(html_85e4127938c8f2fd9d4b1352bc0854cd);\n",
        "        \n",
        "\n",
-       "        marker_1a92903575f1403a66664ae96f646113.bindPopup(popup_a3e356a739e74294e3f326bf55729419)\n",
+       "        marker_18f36ff76948e8f513ff8ee666334452.bindPopup(popup_6451b2738f658b283e6f5cee15fab169)\n",
        "        ;\n",
        "\n",
        "        \n",
        "    \n",
        "    \n",
-       "            var marker_87791fe6052cdeefc2e2abc86a1dcca9 = L.marker(\n",
+       "            var marker_0f467f237f8b9a7d9ed4aa29a777ae96 = L.marker(\n",
        "                [54.97132891441838, -1.6060170244804164],\n",
        "                {}\n",
-       "            ).addTo(map_34ca471bf089f8cf60b1759c36f387fc);\n",
+       "            ).addTo(map_6f3e53998e8216a937e03ad7a9031598);\n",
        "        \n",
        "    \n",
-       "        var popup_5e3a274236ea782e813986c9b4a1010f = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_21fa9f20338ab73e036033a9e0152ee6 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
-       "            var html_8a3ddfe21231d973525dff3ce3095c2c = $(`&lt;div id=&quot;html_8a3ddfe21231d973525dff3ce3095c2c&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Newcastle upon Tyne town defences: section of curtain wall containing Corner Tower&lt;/div&gt;`)[0];\n",
-       "            popup_5e3a274236ea782e813986c9b4a1010f.setContent(html_8a3ddfe21231d973525dff3ce3095c2c);\n",
+       "            var html_45fc18e2f37367bf066c8e14d46d8314 = $(`&lt;div id=&quot;html_45fc18e2f37367bf066c8e14d46d8314&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Newcastle upon Tyne town defences: section of curtain wall containing Corner Tower&lt;/div&gt;`)[0];\n",
+       "            popup_21fa9f20338ab73e036033a9e0152ee6.setContent(html_45fc18e2f37367bf066c8e14d46d8314);\n",
        "        \n",
        "\n",
-       "        marker_87791fe6052cdeefc2e2abc86a1dcca9.bindPopup(popup_5e3a274236ea782e813986c9b4a1010f)\n",
+       "        marker_0f467f237f8b9a7d9ed4aa29a777ae96.bindPopup(popup_21fa9f20338ab73e036033a9e0152ee6)\n",
        "        ;\n",
        "\n",
        "        \n",
        "    \n",
        "    \n",
-       "            var marker_4d56f5b572bba603e22cb18bb2813a67 = L.marker(\n",
+       "            var marker_6bb1554c6a8beeff5f31b6f35b6452e2 = L.marker(\n",
        "                [54.972002755531214, -1.6196308965136506],\n",
        "                {}\n",
-       "            ).addTo(map_34ca471bf089f8cf60b1759c36f387fc);\n",
+       "            ).addTo(map_6f3e53998e8216a937e03ad7a9031598);\n",
        "        \n",
        "    \n",
-       "        var popup_7dde9959cddaff4e3191a723ad7aef8d = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_e87ea4a19fe557f75191bffbb35585a8 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
-       "            var html_aec9c0f11e6240ef30a4a4af30fe060a = $(`&lt;div id=&quot;html_aec9c0f11e6240ef30a4a4af30fe060a&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;The Friars, remains of Dominican friary&lt;/div&gt;`)[0];\n",
-       "            popup_7dde9959cddaff4e3191a723ad7aef8d.setContent(html_aec9c0f11e6240ef30a4a4af30fe060a);\n",
+       "            var html_0279cc1bbc2f91e42d756f62c5384ca6 = $(`&lt;div id=&quot;html_0279cc1bbc2f91e42d756f62c5384ca6&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;The Friars, remains of Dominican friary&lt;/div&gt;`)[0];\n",
+       "            popup_e87ea4a19fe557f75191bffbb35585a8.setContent(html_0279cc1bbc2f91e42d756f62c5384ca6);\n",
        "        \n",
        "\n",
-       "        marker_4d56f5b572bba603e22cb18bb2813a67.bindPopup(popup_7dde9959cddaff4e3191a723ad7aef8d)\n",
+       "        marker_6bb1554c6a8beeff5f31b6f35b6452e2.bindPopup(popup_e87ea4a19fe557f75191bffbb35585a8)\n",
        "        ;\n",
        "\n",
        "        \n",
@@ -308,23 +212,23 @@
        "&lt;/script&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x14a604ae310>"
+       "<folium.folium.Map at 0x1a8a1f1ac70>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pcode= 'NE1'\n",
-    "monument_finder_map(pcode)"
+    "bf.monument_finder_map(pcode)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "713ce07e",
+   "id": "e975693f",
    "metadata": {},
    "outputs": [],
    "source": []
